<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aula_14.v_code.com.br.aula14.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boasVindas"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:id="@+id/editText_agencia"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="@dimen/edit_text_alignment"
            android:hint="@string/agencia_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:inputType="number"/>

        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:id="@+id/editText_conta"
            android:layout_below="@+id/editText_agencia"
            android:layout_alignStart="@+id/editText_agencia"
            android:hint="@string/conta_text"
            android:inputType="number"/>

        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/editText_password"
            android:layout_below="@+id/editText_conta"
            android:layout_alignStart="@+id/editText_agencia"
            android:hint="@string/senha_text"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:text="@string/button_send"

            android:layout_below="@id/editText_password"
            android:layout_alignStart="@id/editText_password"
            android:gravity="center"
            android:textAlignment="center"
            android:onClick="logar"/>
    </RelativeLayout>
</RelativeLayout>
